Unit tests added for config